# p9b_msvc

./: .gitignore  CMakeLists.txt  README.md  build_both.bat  run_all_tests.bat  run_all_tests.sh  test_bug1.bas  test_bug2.bas  test_bug3.bas  test_elseif.bas  test_inline_if.bas  test_let_arr.bas  test_print_sep.bas
cli/: CMakeLists.txt  main.cpp
docs/: Plan9Basic_Language_Reference.md
engine/: CMakeLists.txt  basic.cpp  basic.h  exec.cpp  exec.h  lexer.cpp  lexer.h  p9b_types.h  p9b_utils.h  parser.cpp  parser.h
libs/: CMakeLists.txt  num_lib.h  str_lib.h
tests/phase1/: t01_select_numeric.bas  t02_select_else.bas  t03_select_range.bas  t04_select_list.bas  t05_select_is.bas  t06_select_string.bas  t07_select_nested.bas  t08_select_mixed_list.bas  t09_select_no_match.bas  t10_input_multi.bas  t11_input_mixed.bas  t12_on_goto.bas  t13_on_gosub.bas  t14_on_out_of_range.bas  t15_runtime_error_loc.bas  t16_runtime_error_array.bas  t17_regression_for.bas  t18_regression_func.bas  t19_select_in_func.bas  t20_select_endselect.bas
tests/phase2/: run_tests.sh  t01_write_read.bas  t02_append.bas  t03_eof.bas  t04_input_multi.bas  t05_string_vars.bas  t06_line_input.bas  t07_close_all.bas  t08_two_files.bas  t09_print_sep.bas  t10_bad_filenum.bas
tests/phase3/: run_tests.sh  t01_date_time.bas  t02_input_n.bas  t03_shell.bas  t04_write_file.bas  t05_on_error.bas  t06_on_error_resume.bas  t07_on_error_disable.bas  t08_erl.bas  t09_print_using_num.bas  t10_print_using_str.bas  t11_print_using_comma.bas  t12_print_using_sign.bas  t13_print_using_multi.bas  t14_on_error_file.bas
tests/phase4/: run_tests.sh  t01_format.bas  t02_space.bas  t03_string_n.bas
tests/phase5/: run_tests.sh  t01_bitwise.bas  t02_shifts.bas  t03_bnot_clng.bas
tests/phase6/: run_tests.sh  t01_timer.bas  t02_locate_color.bas  t03_color_bg.bas
tests/phase7/: helper.bas  run_tests.sh  t01_include.bas
tests/phase8/: run_tests.sh  t01_assert_pass.bas  t02_assert_fail.bas  t03_assert_msg.bas  t04_traceon.bas
tests/phase9/: run_tests.sh  t01_fold_arith.bas  t02_fold_chain.bas  t03_fold_mixed.bas
tests/review/: r01_case_insensitive_vars.bas  r02_for_step_zero.bas  r03_read_type_mismatch.bas  r04_pow_negative_frac.bas  r05_resume_without_error.bas  r06_dim_max_size.bas  r07_case_func_return.bas  r08_array_2d.bas  r09_shr_logical.bas  r10_array_3d.bas  run_tests.sh
tests/undef/: run_tests.bat  t01_undef_global.bas  t02_undef_str.bas  t03_arr_no_dim.bas  t04_arr_str_no_dim.bas  t05_assign_then_read.bas  t06_dim_then_access.bas  t07_for_var.bas  t08_input_var.bas  t09_data_read.bas  t10_func_params.bas  t11_func_local_undef.bas  t12_func_global_access.bas  t13_local_stmt.bas  t14_multiline_error_pos.bas  t15_regression_full.bas  t16_let_array.bas  t17_if_else_inline.bas  t18_arr_write_no_dim.bas  t19_str_func.bas  t20_nested_calls.bas  t21_explicit_return.bas  t22_gosub.bas
